--- a/ClusterSotmDB/ClusterSotmDB.csproj
+++ b/ClusterSotmDB/ClusterSotmDB.csproj
@@ -160,6 +160,7 @@
   <ItemGroup>
     <None Include="Config\App.config" />
     <None Include="Config\packages.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
