--- a/ClusterSotmDB/ClusterSotmDB.csproj
+++ b/ClusterSotmDB/ClusterSotmDB.csproj
@@ -152,6 +152,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UtilConst.cs" />
     <Compile Include="Cluster.cs" />
     <Compile Include="TaskOrder.cs" />
     <Compile Include="Utils\DBUtils.cs" />
@@ -162,7 +163,6 @@
   <ItemGroup>
     <None Include="Config\App.config" />
     <None Include="Config\packages.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
