--- a/ClusterStomDB/ClusterStomDB.csproj
+++ b/ClusterStomDB/ClusterStomDB.csproj
@@ -167,10 +167,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Doctor.cs" />
+    <Compile Include="Clinic.cs" />
     <Compile Include="UtilConst.cs" />
-    <Compile Include="Cluster.cs" />
-    <Compile Include="TaskOrder.cs" />
     <Compile Include="Utils\DBUtils.cs" />
     <Compile Include="Utils\DBConnection.cs" />
     <Compile Include="Program.cs" />
